# eps32-robot-vla

./: README.md  pyproject.toml
config/: smolvla_config.yaml
scripts/: prepare_data.py  train.py
src/esp32_robot_vla/: config.py  dataset.py
